force-app/main/default/objects/student__c/fields/adres__c.field-meta.xml
<CustomField>
    <fullName>adres__c</fullName>
    <label>adres</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>