force-app/main/default/objects/student__c/fields/Annual_Payment__c.field-meta.xml
<CustomField>
    <fullName>Annual_Payment__c</fullName>
    <label>Annual Payment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>