force-app/main/default/objects/student__c/fields/Ayni_Aydami_Dogdu__c.field-meta.xml
<CustomField>
    <fullName>Ayni_Aydami_Dogdu__c</fullName>
    <formula>MONTH( BirthOfDate__c )  =  MONTH( TODAY() )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ayni Aydami Dogdu</label>
    <type>Checkbox</type>
</CustomField>