force-app/main/default/objects/student__c/fields/dogru_yanlis__c.field-meta.xml
<CustomField>
    <fullName>dogru_yanlis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>dogru-yanlis</label>
    <type>Checkbox</type>
</CustomField>