force-app/main/default/objects/student__c/fields/Formatli_Ad__c.field-meta.xml
<CustomField>
    <fullName>Formatli_Ad__c</fullName>
    <formula>UPPER(LEFT( FirstName__c  , 1))  &amp;  LOWER( MID(FirstName__c, 2,  LEN(FirstName__c)-1))   &amp; &apos;  &apos; &amp;  UPPER( LastName__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formatli Ad</label>
    <type>Text</type>
</CustomField>