force-app/main/default/objects/student__c/fields/Ful_Name__c.field-meta.xml
<CustomField>
    <fullName>Ful_Name__c</fullName>
    <formula>TEXT(Gender__c )+ FirstName__c + LastName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ful Name</label>
    <type>Text</type>
</CustomField>