force-app/main/default/objects/student__c/fields/indirimler__c.field-meta.xml
<CustomField>
    <fullName>indirimler__c</fullName>
    <label>indirimler</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>