force-app/main/default/objects/student__c/fields/kimlik_seri_numarasi__c.field-meta.xml
<CustomField>
    <fullName>kimlik_seri_numarasi__c</fullName>
    <label>kimlik seri numarasi</label>
    <length>11</length>
    <type>Text</type>
</CustomField>