force-app/main/default/objects/student__c/fields/konum__c.field-meta.xml
<CustomField>
    <fullName>konum__c</fullName>
    <label>konum</label>
    <scale>0</scale>
    <type>Location</type>
</CustomField>