force-app/main/default/objects/student__c/fields/odeme__c.field-meta.xml
<CustomField>
    <fullName>odeme__c</fullName>
    <label>odeme</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>