force-app/main/default/objects/student__c/fields/resim__c.field-meta.xml
<CustomField>
    <fullName>resim__c</fullName>
    <label>resim</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>