force-app/main/default/objects/student__c/fields/sehir__c.field-meta.xml
<CustomField>
    <fullName>sehir__c</fullName>
    <label>sehir</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>State__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>sehirler</valueSetName>
    </valueSet>
</CustomField>