force-app/main/default/objects/student__c/fields/sifre__c.field-meta.xml
<CustomField>
    <fullName>sifre__c</fullName>
    <label>sifre</label>
    <length>10</length>
    <maskChar>X</maskChar>
    <maskType>all</maskType>
    <required>true</required>
    <type>EncryptedText</type>
</CustomField>