force-app/main/default/objects/student__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Devam</fullName>
            </value>
            <value>
                <fullName>Ediyor</fullName>
            </value>
            <value>
                <fullName>Mezun</fullName>
            </value>
            <value>
                <fullName>Ayrıldı</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>