force-app/main/default/objects/student__c/fields/tarih_saat__c.field-meta.xml
<CustomField>
    <fullName>tarih_saat__c</fullName>
    <label>tarih saat</label>
    <type>DateTime</type>
</CustomField>