force-app/main/default/objects/student__c/fields/tc_kimlik__c.field-meta.xml
<CustomField>
    <fullName>tc_kimlik__c</fullName>
    <label>tc kimlik</label>
    <length>11</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>