force-app/main/default/objects/student__c/fields/TEACHER__c.field-meta.xml
<CustomField>
    <fullName>TEACHER__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mentor</label>
    <referenceTo>TEACHER__c</referenceTo>
    <relationshipLabel>students</relationshipLabel>
    <relationshipName>students</relationshipName>
    <type>Lookup</type>
</CustomField>