force-app/main/default/objects/student__c/fields/telefon__c.field-meta.xml
<CustomField>
    <fullName>telefon__c</fullName>
    <label>telefon</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>