force-app/main/default/objects/student__c/fields/telefon_no__c.field-meta.xml
<CustomField>
    <fullName>telefon_no__c</fullName>
    <label>telefon no</label>
    <type>Phone</type>
</CustomField>