force-app/main/default/objects/student__c/fields/tuttugu_takim__c.field-meta.xml
<CustomField>
    <fullName>tuttugu_takim__c</fullName>
    <formula>IMAGE(&apos;/resource/1647894848000/fenerbahce?&apos;, &apos;FB&apos; , 100, 200)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>tuttugu takim</label>
    <type>Text</type>
</CustomField>