force-app/main/default/objects/student__c/fields/ulke__c.field-meta.xml
<CustomField>
    <fullName>ulke__c</fullName>
    <label>ulke</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ulkeler</valueSetName>
    </valueSet>
</CustomField>