force-app/main/default/objects/student__c/fields/web__c.field-meta.xml
<CustomField>
    <fullName>web__c</fullName>
    <label>web</label>
    <type>Url</type>
</CustomField>