force-app/main/default/objects/student__c/recordTypes/eski_ogrenci.recordType-meta.xml
<RecordType>
    <fullName>eski_ogrenci</fullName>
    <active>true</active>
    <label>eski ogrenci</label>
</RecordType>