force-app/main/default/objects/student__c/recordTypes/yeni_ogrenci.recordType-meta.xml
<RecordType>
    <fullName>yeni_ogrenci</fullName>
    <active>true</active>
    <label>yeni ogrenci</label>
</RecordType>